--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             <div></div>
         </section>
         <nav id="mySidenav" class="sidenav">
-            <a class="home" href="#"><img id="dove" src="homeLogo - Copy.png" alt="dove logo"></a>
+            <a class="home1" href="#"><img id="dove" src="tcclogo.png" alt="dove logo"></a>
             <!-- <a id="home2" class="home" href="#"><img id="tccLogo" src="default1 - Copy.png" alt="text logo"></a> -->
             <ul>
+                <!-- <li class="home"><a class="home" href="#">HOME</a></li> -->
                 <li class="history"><a class="history" href="#history">ABOUT</a></li>
                 <li class="address"><a class="address" href="#address">ADDRESS</a></li>
                 <li class="pricing"><a class="pricing" href="#pricing">PLOT PRICING</a></li>
@@ -52,10 +53,11 @@
           <div id="main">
               <!-- Home Page-->
               <section id="home">
-                <img src="cover.png" alt="text logo">
-                  <!-- <h2>The Resting Place</h2>
-                  <h1>for Loved Ones</h1> -->
-                  <!-- <img id="cemetery" src="homepage.jpg" alt="cemetery pic"> -->
+                <video width="520" height="500" autoplay muted>
+                    <source src="Trinity Community Cemetery.mp4" type="video/mp4">
+                    <source src="Trinity Community Cemetery.mp4" type="video/ogg">
+                  Your browser does not support the video tag.
+                  </video>
                 </section>
                 <!--History of Cemetery-->
                 <section id="history">
@@ -114,10 +116,10 @@
                 </section>
                 <!--Address-->
                 <section id="address">
-                    <div class="mapouter"><div class="gmap_canvas"><iframe width="800" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=S%20MLK%20JR%20Street/Fairdale%20Trinity%20Tx%2075862&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:350px;width:600px;}</style><a href="https://www.embedgooglemap.net">embed google maps website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:600px;}</style></div></div>
+                    <div class="mapouter"><div class="gmap_canvas"><iframe width="1000" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=S%20MLK%20JR%20Street/Fairdale%20Trinity%20Tx%2075862&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:350px;width:1000px;}</style><a href="https://www.embedgooglemap.net">embed google maps website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:1000px;}</style></div></div>
                     <!-- <div class="mapouter1 hide"><div class="gmap_canvas"><iframe width="450" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=S%20MLK%20JR%20Street/Fairdale%20Trinity%20Tx%2075862&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:450px;}</style><a href="https://www.embedgooglemap.net">embed google maps website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:450px;}</style></div></div> -->
                     
-                    <h3>Address</h3>
+                    <!-- <h3>Address</h3> -->
                 </section>
                 <section id="pricing">
                     <div id="pricingHeading">
@@ -141,17 +143,13 @@
                           <!-- <div class="numbertext">3 / 3</div> -->
                           <img src="644179434.jpg" style="width:100%">
                           <!-- <div class="text">Contact Mr.Rector at (936)594-0000</div> -->
-                        </div>
-                        <br>
-                        
-                        <div style="text-align:center">
-                          <span class="dot"></span> 
-                          <span class="dot"></span> 
-                          <span class="dot"></span> 
-                        </div>
-                        <div class="pricingInfo">
+                        </div>               
+                        <span class="dot"></span> 
+                        <span class="dot"></span> 
+                        <span class="dot"></span> 
+                        <!-- <div class="pricingInfo">
                             <span> For more info, contact Mr. Rector at (936)594-0000</span>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
                 <section id="rules">
@@ -222,7 +220,7 @@
                                 </section>
                                 <section class="nameBox">
                                     <span class="name">Jackie Goodall</span>
-                                    <span>Business Manager</span> 
+                                    <span>Caretaker</span> 
                                 </section>
                         </section>
                         <section class="team">
@@ -231,13 +229,12 @@
                             </section>
                             <section class="nameBox">
                                 <span class="name">Michelle Kizzee</span>
-                                <span>Treasurer</span>
+                                <span>Treasurer-Secretary</span>
                             </section>
                         </section>
                     </section>
                 </section>
                 <section id="contact">
-                    <h3>Contact Us</h3>
                     <div class="row">
                         <div class="form">
                             <!-- Contact Form -->
