--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
                         From 1942-1954, a plot at the Trinity Community Cemetery cost $2. Between 1954-1969, a plot cost $4. From 1969-1981, a plot cost $10 and January 
                         1981, plot costs increased to $25.<br>
 
-                        To view current plot prices, visit <a href=#pricing>here</a>.)<br>
-                        To view today's Trinity Community Cemetery Association, visit <a href=#committee>here</a>.)
+                        To view current plot prices, visit <a href=#pricing>here</a>.<br>
+                        To view today's Trinity Community Cemetery Association, visit <a href=#committee>here</a>.
                         </span></p>
                     <button type="button" onclick="myFunction()" id="myBtn" class="readmore">Read More</button>
                 </section>
                 <!--Address-->
                 <section id="address">
                     <div class="mapouter"><div class="gmap_canvas"><iframe width="1000" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=S%20MLK%20JR%20Street/Fairdale%20Trinity%20Tx%2075862&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:350px;width:1000px;}</style><a href="https://www.embedgooglemap.net">embed google maps website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:1000px;}</style></div></div>
-                    <!-- <div class="mapouter1 hide"><div class="gmap_canvas"><iframe width="450" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=S%20MLK%20JR%20Street/Fairdale%20Trinity%20Tx%2075862&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:450px;}</style><a href="https://www.embedgooglemap.net">embed google maps website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:450px;}</style></div></div> -->
+                    <div class="mapouter1"><div class="gmap_canvas"><iframe width="450" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=S%20MLK%20JR%20Street/Fairdale%20Trinity%20Tx%2075862&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:450px;}</style><a href="https://www.embedgooglemap.net">embed google maps website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:450px;}</style></div></div>
                     
                     <!-- <h3>Address</h3> -->
                 </section>
@@ -261,10 +261,9 @@
                             <div class="contactBox">
                                 <section>
                                     <img src="address_white_321974.png" alt="address icon">
-                                    <h4>Address</h4>
+                                    <h4>Location</h4>
                                     <p>
-                                        Untitled Corp<br />
-                                        1234 Somewhere Rd<br />
+                                        1234 MLK Jr.<br />
                                         Trinity, TX 75862
                                     </p>
                                 </section>
