--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </head>
     <body>
         <section id="menuBG">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="navMenu"></div>
+            <div class="navMenu"></div>
+            <div class="navMenu"></div>
         </section>
         <nav id="mySidenav" class="sidenav">
             <a class="home1" href="#"><img id="dove" src="tcclogo.png" alt="dove logo"></a>
@@ -58,6 +58,7 @@
                     <source src="Trinity Community Cemetery.mp4" type="video/ogg">
                   Your browser does not support the video tag.
                   </video>
+                <img id="homeLogo" src="tcchome.jpg" alt="homepage logo">
                 </section>
                 <!--History of Cemetery-->
                 <section id="history">
