--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         
     </head>
     <body>
+
         <section id="menuBG">
             <div class="navMenu"></div>
             <div class="navMenu"></div>
@@ -38,13 +39,11 @@
         </section>
         <nav id="mySidenav" class="sidenav">
             <a class="home1" href="#"><img id="dove" src="tcclogo.png" alt="dove logo"></a>
-            <!-- <a id="home2" class="home" href="#"><img id="tccLogo" src="default1 - Copy.png" alt="text logo"></a> -->
             <ul>
-                <!-- <li class="home"><a class="home" href="#">HOME</a></li> -->
                 <li class="history moreInfo"><a class="history" href="#history">ABOUT</a></li>
                 <li class="address"><a class="address" href="#address">ADDRESS</a></li>
-                <li class="pricing"><a class="pricing" href="#pricing">PLOT PRICING</a></li>
-                <li class="rules"><a class="rules" href="#rules">RULES AND BYLAWS</a></li>
+                <li class="pricing"><a class="pricing" href="#pricing">PRICING AND RULES</a></li>
+                <!-- <li class="rules"><a class="rules" href="#rules">RULES AND BYLAWS</a></li> -->
                 <li class="committee"><a class="committee" href="#committee">COMMITTEE</a></li>
                 <li class="contact"><a class="contact" href="#contact">CONTACT</a></li>
             </ul>
@@ -52,13 +51,71 @@
 
           <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
           <div id="main">
+              <!-- pop-up modals -->
+            <!-- rules/bylaws overlay -->
+            <div id="overlayRules">
+                <div id="modalRules">
+                    <div id="heading">
+                        <h3>Rules and Bylaws</h3>
+                        <button id="close-modal-btn">Close</button>
+                    </div>
+                    <ol id="listOfRules">
+                        <li class="fade-in">All grading, landscaping, and improvements of any kind, and all care on plots shall be done, and all trees and shrubs and herbage of any kind
+                            shall be planted, trimmed, cut or removed and all openings and closings of plots, and all interments, disinterment and removals shall be made only by the TCCA
+                            unless by special permit from the TCCA in writing.
+                        </li>
+                        <li class="fade-in">The Trinity Community Cemetery Association (TCCA) reserves the right to remove all floral designs, flowers, weeds, trees,
+                            shrubs, and herbage of any kind, from the cemetery as soon as, in judgment of the TCCA, they become unsightly, dangerous, detrimental,
+                            or diseased, or when they do not conform to the standards maintained by the rest of the cemeteries.</li>
+                        <li class="fade-in">The TCCA shall not be held liable for floral pieces, baskets, or frames in which or to which such floral pieces are attached,
+                            beyond the acceptance of such floral pieces for funeral servce held in cemetery They shall not be liable for lost, misplaced, or broken flower vases.</li>
+                        <li class="fade-in">The TCCA shall not be responsible for frozen plants or herbage of any kind, or for plantings damaged by the elements, thieves, vandals,
+                            or by causes beyond its control.
+                        </li>
+                        <li class="fade-in">The TCCA reserves the right to prevent the removal of any flowers, floral designs, trees, shrubs, or plants, or herbage, of any kind unless
+                            the TCCA gives written consent.</li>
+                        <li class="fade-in">The following items are strictly prohibitted, and if so placed, the TCCA reserves the right to remove:<br>
+                            a.) The placing of boxes, shells, toys, metal designs, ornaments, chairs.<br>
+                            b.) Glass, wood, or iron cases and similar articles.<br>
+                            c.) Shrubs on lots without monuments. <br>
+                            d.) Marble chips around monuments or markers.<br>
+                            e.) Window boxes, pots, glass jars, etc., except for one week before and after Memorial Day.</li>
+                        <li class="fade-in">All fittings, adornments, urns, inscriptions, and arrangements of crypts or niches shall be, and are hereby declared to be, subject to
+                            the approval and control of, and acceptance or rejection by the TCCA.</li>
+                        <li class="fade-in">As a special mark of respect for those that have served our Country, the American flag shall be displayed only on the grave of those 
+                            persons who have honorably served in the armed forces of the United States of America.
+                        </li>
+                        <li class="fade-in">Artificial flowers must be removed and renewed within one (1) month and fresh flowers must be removed and renewed within one (1) week.</li>
+                    </ol>
+                </div>
+            </div>
+
+
+            <!-- pricing overlay -->
+            <div id="overlayPricing" class="overlay">
+                <div id="modalPricing" class="modal">
+                    <div id="pricingHeading">
+                        <h3> Plot Pricing</h3>
+                        <button id="close-pricing-modal">Close</button>
+                        <h2 id="plotPricing">$700 per plot</h2>
+                    </div>
+                </div>
+            </div>
+
+
+
+
               <!-- Home Page -->
               <section id="home">
-                <img id="homeLogo" src="cover.png" alt="homepage logo">
+                <!-- <img id="homeLogo" src="cover.png" alt="homepage logo"> -->
+                    <h1 id="mainLogo">Trinity Community</h1>
+                    <div id="subLogo">
+                        <h2 id="mainLogo2">Cemetery</h2>
+                    </div>
                 </section>
                 <!--History of Cemetery-->
                 <section id="history">
-                    <h3>- Our Story -</h3>
+                    <span>---<h3 id="aboutHeading">Our Story</h3>---</span>
                     <section id="moreInfo">
                         <video width="520" height="320" controls muted>
                             <source src="images/IMG_1942.MP4" type="video/mp4">
@@ -99,93 +156,39 @@
                     <!-- <div class="mapouter1 hide"><div class="gmap_canvas"><iframe width="400" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=Trinity%20City%20Cemetery%20Trinity%20TX&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org">pirate bay</a><br><style>.mapouter{position:relative;text-align:right;height:350px;width:400px;}</style><a href="https://www.embedgooglemap.net">google map on your website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:400px;}</style></div></div> -->
                     <!-- <h3>Address</h3> -->
                 </section>
-                <section id="pricing">
-                    <div id="pricingHeading">
-                        <h3> Plot Pricing</h3>
-                        <h2 id="plotPricing" class="hide">$700 per plot</h2>
+                <div id="quickLinks">
+                    <div class="linkOut">
+                        <section id="pricing">
+                            <img src="images/IMG_1943.JPEG" alt="gravesite">
+                            <div class="details">
+                                <h3 class="detailHeading">Plot Pricing</h3>
+                                <button id="show-pricing-modal" class="buttons" type="button">Learn More</button>
+                            </div>
+                        </section>
                     </div>
-                    <div class="slideshow-container">
-                        <div class="mySlides fade">
-                          <!-- <div class="numbertext">2 / 3</div> -->
-                          <img src="images/IMG_1939.JPEG" style="width:100%">
-                          <!-- <div class="text">For more info,</div> -->
+                    <div class="linkOut">
+                        <!-- <section id="rules"> -->
+                            <img src="images/IMG_1873.JPEG" alt="gravesite photo">
+                            <div class="details">
+                                <h3 class="detailHeading">Rules and Bylaws</h3>
+                                <button id="show-modal-btn" class="buttons" type="button">Learn More</button>
+                            </div>
+                    </div>
+                    <div class="linkOut">
+                        <img src="images/IMG_1968.JPEG" alt="gravesite">
+                        <div class="details">
+                            <h3 class="detailHeading">Contact</h3>
+                            <button id="show-modal-btn2" class="buttons" type="button">More Info</button>
                         </div>
-                        
-                        <div class="mySlides fade">
-                          <!-- <div class="numbertext">3 / 3</div> -->
-                          <img src="images/IMG_1968.JPEG" style="width:100%">
-                          <!-- <div class="text">Contact Mr.Rector at (936)594-0000</div> -->
-                        </div>  
-                        <div class="mySlides fade">
-                            <!-- <div class="numbertext">3 / 3</div> -->
-                            <img src="images/IMG_1943.JPEG" style="width:100%">
-                            <!-- <div class="text">Contact Mr.Rector at (936)594-0000</div> -->
-                          </div> 
-                          <div class="mySlides fade">
-                            <!-- <div class="numbertext">3 / 3</div> -->
-                            <img src="images/IMG_1991.JPEG" style="width:100%">
-                            <!-- <div class="text">Contact Mr.Rector at (936)594-0000</div> -->
-                          </div> 
-                          <div class="mySlides fade">
-                            <!-- <div class="numbertext">3 / 3</div> -->
-                            <img src="images/IMG_1937.JPEG" style="width:100%">
-                            <!-- <div class="text">Contact Mr.Rector at (936)594-0000</div> -->
-                          </div> 
-                          <div class="mySlides fade">
-                            <!-- <div class="numbertext">3 / 3</div> -->
-                            <img src="images/IMG_1997.JPEG" style="width:100%">
-                            <!-- <div class="text">Contact Mr.Rector at (936)594-0000</div> -->
-                          </div> 
-                        <div class="mySlides fade">
-                            <!-- <div class="numbertext">1 / 3</div> -->
-                            <img src="images/644179434.jpg" style="width:100%">
-                            <!-- <div class="text">$700 per plot</div> -->
-                          </div>             
-                        <span class="dot"></span> 
-                        <span class="dot"></span> 
-                        <span class="dot"></span> 
-                        <span class="dot"></span> 
-                        <span class="dot"></span> 
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <!-- <div class="pricingInfo">
-                            <span> For more info, contact Mr. Rector at (936)594-0000</span>
-                        </div> -->
                     </div>
-                </section>
-                <section id="rules">
-                        <h3>Rules and Bylaws</h3>
-                        <ol id="listOfRules" class="hide">
-                            <li class="fade-in">All grading, landscaping, and improvements of any kind, and all care on plots shall be done, and all trees and shrubs and herbage of any kind
-                                shall be planted, trimmed, cut or removed and all openings and closings of plots, and all interments, disinterment and removals shall be made only by the TCCA
-                                unless by special permit from the TCCA in writing.
-                            </li>
-                            <li class="fade-in">The Trinity Community Cemetery Association (TCCA) reserves the right to remove all floral designs, flowers, weeds, trees,
-                                shrubs, and herbage of any kind, from the cemetery as soon as, in judgment of the TCCA, they become unsightly, dangerous, detrimental,
-                                or diseased, or when they do not conform to the standards maintained by the rest of the cemeteries.</li>
-                            <li class="fade-in">The TCCA shall not be held liable for floral pieces, baskets, or frames in which or to which such floral pieces are attached,
-                                beyond the acceptance of such floral pieces for funeral servce held in cemetery They shall not be liable for lost, misplaced, or broken flower vases.</li>
-                            <li class="fade-in">The TCCA shall not be responsible for frozen plants or herbage of any kind, or for plantings damaged by the elements, thieves, vandals,
-                                or by causes beyond its control.
-                            </li>
-                            <li class="fade-in">The TCCA reserves the right to prevent the removal of any flowers, floral designs, trees, shrubs, or plants, or herbage, of any kind unless
-                                the TCCA gives written consent.</li>
-                            <li class="fade-in">The following items are strictly prohibitted, and if so placed, the TCCA reserves the right to remove:<br>
-                                a.) The placing of boxes, shells, toys, metal designs, ornaments, chairs.<br>
-                                b.) Glass, wood, or iron cases and similar articles.<br>
-                                c.) Shrubs on lots without monuments. <br>
-                                d.) Marble chips around monuments or markers.<br>
-                                e.) Window boxes, pots, glass jars, etc., except for one week before and after Memorial Day.</li>
-                            <li class="fade-in">All fittings, adornments, urns, inscriptions, and arrangements of crypts or niches shall be, and are hereby declared to be, subject to
-                                the approval and control of, and acceptance or rejection by the TCCA.</li>
-                            <li class="fade-in">As a special mark of respect for those that have served our Country, the American flag shall be displayed only on the grave of those 
-                                persons who have honorably served in the armed forces of the United States of America.
-                            </li>
-                            <li class="fade-in">Artificial flowers must be removed and renewed within one (1) month and fresh flowers must be removed and renewed within one (1) week.</li>
-                        </ul>
-                </section>
+                </div>
+
+                <!-- <section id="rules">
+                    <h3>Rules and Bylaws</h3>
+                    <button id="show-modal-btn">More Info</button>
+            </section> -->
                 <section id="committee">
-                    <h3>Meet the Committee</h3>
+                    <span>---<h3 id="committeeHeading">Meet the Committee</h3>---</span>
                     <div class="three">
                         <div class="team pop-out">
                             <img src="IMG_0913.JPEG" alt="staff image">
@@ -215,7 +218,7 @@
                                 <span>Secretary</span>
                             </section>
                         </div>
-                        <div class="team">
+                        <div class="team pop-out">
                                 <section class="blankBox">
                                     <!-- <span class="notPictured">Not Pictured</span> -->
                                 </section>
@@ -224,7 +227,7 @@
                                     <span>Caretaker</span> 
                                 </section>
                         </div>
-                        <div class="team">
+                        <div class="team pop-out">
                             <section class="blankBox">
                                 <!-- <span class="notPictured">Not Pictured</span> -->
                             </section>
