contact section color change

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             <!-- Contact -->
                             <div class="contactBox">
                                 <section>
-                                    <img src="address_white_321974.png" alt="address icon">
+                                    <!-- <img src="address_white_321974.png" alt="address icon"> -->
                                     <h4>Location</h4>
                                     <p>
                                         1234 MLK Jr.<br />
@@ -275,19 +275,9 @@
                                     </p>
                                 </section>
                             </div>
-                            <!-- <div class="contactBox">
-                                <section>
-                                    <h3 class="icon solid fa-comment">Social</h3>
-                                    <p>
-                                        <a href="#">@untitled-corp</a><br />
-                                        <a href="#">linkedin.com/untitled</a><br />
-                                        <a href="#">facebook.com/untitled</a>
-                                    </p>
-                                </section>
-                            </div> -->
                             <div class="contactBox">
                                 <section>
-                                    <img src="email.png" alt="email icon">
+                                    <!-- <img src="email.png" alt="email icon"> -->
                                     <h4>Email</h4>
                                     <p>
                                         <a href="mailto:sdennis14@gmail.com">info@untitled.tld</a>
@@ -296,7 +286,7 @@
                             </div>
                             <div class="contactBox">
                                 <section>
-                                    <img src="phone.png" alt="phone icon">
+                                    <!-- <img src="phone.png" alt="phone icon"> -->
                                     <h4>Phone</h4>
                                     <p>
                                         (000) 555-0000
