responsive layout updates

--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
                             <!-- Contact Form -->
                                 <section>
                                     <form method="post" action="#">
-                                        <input type="text" name="name" id="contact-name" placeholder="Name" />
-                                        <input type="text" name="email" id="contact-email" placeholder="Email" />
+                                        <input type="text" name="name" id="contact-name" type="text" placeholder="Name" />
+                                        <input type="text" name="phone" id="contact-phone" type="tel" placeholder="Phone Number" />
+                                        <input type="text" name="email" id="contact-email" type="email" placeholder="Email" />
                                             <!-- </div> -->
                                             <div class="col-12">
                                                 <textarea name="message" id="contact-message" placeholder="Message" rows="4"></textarea>
