homepage overlay added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
             </div>
 
 
-
+            <div id="overlayHome">
+                <div id="modalHome" class="modal1">
+                    <button id="close-home-modal">Enter</button>
+                </div>
+            </div>
 
               <!-- Home Page -->
               <section id="home">
