updated landing page and committee images

--- a/index.html
+++ b/index.html
@@ -192,35 +192,35 @@
                 <section id="committee">
                     <span>---<h3 id="committeeHeading">Meet the Committee</h3>---</span>
                     <div class="three">
-                        <div class="team pop-out">
+                        <div class="team">
                             <img src="IMG_0913.JPEG" alt="staff image">
                             <section class="nameBox">
                                 <span class="name">Jimmie Rector</span>
                                 <span>President</span>   
                             </section>
                         </div>
-                        <div class="team pop-out">
+                        <div class="team">
                             <img src="20151123_182354.JPG" alt="staff image">
                             <section class="nameBox">
                                 <span class="name">Chris Dennis</span>
                             <span>Superintendent</span>
                             </section>
                         </div>
-                        <div class="team pop-out">
+                        <div class="team">
                             <img src="IMG_7047.JPEG" alt="staff image">
                             <section class="nameBox">
                                 <span class="name">Vera Rector</span>
                                 <span>Public Relations</span>
                             </section>
                         </div>
-                        <div class="team pop-out">
+                        <div class="team">
                             <img src="20170806_132257.JPG" alt="staff image">
                             <section class="nameBox">
                                 <span class="name">Sharon Dennis</span>
                                 <span>Secretary</span>
                             </section>
                         </div>
-                        <div class="team pop-out">
+                        <div class="team">
                                 <section class="blankBox">
                                     <span class="notPictured" id="notPictured">Not Pictured</span>
                                 </section>
@@ -229,7 +229,7 @@
                                     <span>Caretaker</span> 
                                 </section>
                         </div>
-                        <div class="team pop-out">
+                        <div class="team">
                             <section class="blankBox">
                                 <span class="notPictured" id="notPictured">Not Pictured</span>
                             </section>
