changed color of about text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li class="committee"><a class="committee" href="#committee">COMMITTEE</a></li>
                 <li class="contact"><a class="contact" href="#contact">CONTACT</a></li>
             </ul>
-            <img id="dove" src="tcclogo.png" alt="dove logo">
+            <!-- <img id="dove" src="tcclogo.png" alt="dove logo"> -->
         </div>
 
         <section id="menuBG">
